Issue #2284789 by neardark: Theming - Promo slideshow on landing page has large unwanted gap.

--- a/profiles/dcco/themes/dcco2014/css/screen.css
+++ b/profiles/dcco/themes/dcco2014/css/screen.css
@@ -1780,11 +1780,11 @@ div.password-confirm {
 }
 
 .promos {
-  margin: 50px 0;
+  padding: 50px 0;
 }
 @media (min-width: 768px) {
   .promos {
-    margin: 150px 0;
+    padding: 150px 0;
   }
 }
 
